--- a/src/main/resources/aclcbukidnon/com/javafxactivity/traffic-light-view.fxml
+++ b/src/main/resources/aclcbukidnon/com/javafxactivity/traffic-light-view.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Circle?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="638.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Circle fill="#575757" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#575757" layoutX="110.0" layoutY="110.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#575757" layoutX="310.0" layoutY="110.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
-   </children>
+<HBox alignment="CENTER" prefHeight="243.0" prefWidth="642.0" spacing="10.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aclcbukidnon.com.javafxactivity.controllers.TrafficLightController">
+
    <padding>
       <Insets left="10.0" right="10.0" />
    </padding>
+   <Circle fx:id="stopLight" fill="#575757" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+   <Circle fx:id="holdLight" fill="#575757" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+   <Circle fx:id="goLight" fill="#575757" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
 </HBox>
